[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Themes/secondary.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/CosmeticMenu/cosmetic_button.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/UI/newbadge.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.933333, 0.835294, 1 )
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.352941, 0.458824, 0.352941, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[node name="Button" type="Button"]
anchor_right = 0.0333333
anchor_bottom = 0.0592593
margin_right = -52.0
margin_bottom = -44.0
rect_min_size = Vector2( 90, 90 )
theme = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.0627451, 0.109804, 0.192157, 1 )
custom_colors/font_color_focus = Color( 0.0627451, 0.109804, 0.192157, 1 )
custom_colors/font_color = Color( 0.0627451, 0.109804, 0.192157, 1 )
custom_colors/font_color_hover = Color( 0.0627451, 0.109804, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.109804, 0.192157, 1 )
clip_text = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
mouse_filter = 2
expand = true

[node name="tooltip_node" parent="." instance=ExtResource( 2 )]

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -15.0
margin_top = -15.0
margin_right = 33.0
margin_bottom = 33.0
texture = ExtResource( 4 )

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
